[package]
name = "workflow-nodes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Task/node implementations for Pantograph workflow engine"
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Framework
node-engine = { path = "../node-engine" }
graph-flow.workspace = true

# Model management (optional — enable via `model-library` feature)
pumas-library = { workspace = true, optional = true }

# Async/Serialization
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
log.workspace = true
uuid = { workspace = true }

# Link-time collection of TaskMetadata descriptors
inventory = { workspace = true }

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["desktop"]
desktop = []
model-library = ["dep:pumas-library"]
